Fixed a bug where the footer had a gap below so it wouldn't sit flush. This is now rectified

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,6 +221,7 @@ footer {
 .social-links {
     text-align: center;
     background-color: black;
+    margin: 50px 0 0 0;
 }
 
 .social-links li {
